VSE - Strip menu - Split - adjust last operator displays wrong channel number #79872

Closed
opened 2020-08-18 10:26:47 +02:00 by Reiner Prokein · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-16 04:21, hash: d5d83b71f7

Short description of error
When splitting strips with the Split tool, then the channel number in the adjust last operator panel. It dances around with every new try.

When i do the same operation with the blade tool, then the channel number is displayed correct.

Exact steps for others to reproduce the error

Open Blender, switch to VSE layout, load a video clip.

Cut the strip with the Split operator. Watch the adjust last operation panel. It will display the incorrect channel number.

split.jpg

2020-08-18 10-22-50.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-16 04:21, hash: `d5d83b71f7` **Short description of error** When splitting strips with the Split tool, then the channel number in the adjust last operator panel. It dances around with every new try. When i do the same operation with the blade tool, then the channel number is displayed correct. **Exact steps for others to reproduce the error** Open Blender, switch to VSE layout, load a video clip. Cut the strip with the Split operator. Watch the adjust last operation panel. It will display the incorrect channel number. ![split.jpg](https://archive.blender.org/developer/F8790443/split.jpg) [2020-08-18 10-22-50.mp4](https://archive.blender.org/developer/F8790440/2020-08-18_10-22-50.mp4)
Author

Added subscriber: @tiles

Added subscriber: @tiles
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-08-19 13:31:38 +02:00
Member

This operator is dependent on mouse position (if the Use Cursor Position option is used).
The Channel property is irrelevant/unused in this case.
So it is not optimal displaying this property when calling this from the menu (or even using )

We could hide the property in the Adjust Last Operation panel in this case.
[an even nicer solution would be to have a custom op->ui callback -- the properties could be drawn in relation to another then (Channel underneath Use Cursor Position) -- not sure if this is overkill though]
There are other parts in blender where this is not consistent, so not really sure if this is the best solution.

Will post patch for hiding/polling that property when it is not relevant.

This operator is dependent on mouse position (if the `Use Cursor Position` option is used). The Channel property is irrelevant/unused in this case. So it is not optimal displaying this property when calling this from the menu (or even using ) We could hide the property in the `Adjust Last Operation` panel in this case. [an even nicer solution would be to have a custom op->ui callback -- the properties could be drawn in relation to another then (`Channel` underneath `Use Cursor Position`) -- not sure if this is overkill though] There are other parts in blender where this is not consistent, so not really sure if this is the best solution. Will post patch for hiding/polling that property when it is not relevant.

This issue was referenced by e74ba9e09e

This issue was referenced by e74ba9e09e74a1a6d340877469eed05c810f46b3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79872
No description provided.